--- a/dog_show.html
+++ b/dog_show.html
@@ -13,18 +13,21 @@
             </h1>
             <hr>
 
-            <img src="dog.png"
+            <img src="images/dog.png"
+            alt="This is a picture of a dog"
             height="250">
 
             <br><br>
 
             <a href="https://www.google.co.il/?gws_rd=ssl">
-                <img src="funny_dog.gif"
+                <img src="images/funny_dog.gif"
+                alt="This is a funny dog gif"
                 height="200">
             </a>
 
             <a href="https://www.google.co.il/?gws_rd=ssl">
-                <img src="funny_dog2.gif"
+                <img src="images/funny_dog2.gif"
+                alt="This is a funny dog gif"
                 height="200">
             </a>
 
