--- a/dogs.html
+++ b/dogs.html
@@ -16,18 +16,18 @@
 
         <hr><br>
 
-        <img src="dog.png"
+        <img src="images/dog.png"
         alt="This is a picture of a dog"
         height="200">
 
         <br><br>
 
         <a href="https://www.pinterest.com/pin/because-they-chase-and-attack-their-own-reflections--562809284657639550/">
-            <img src="funny_dog.gif"
+            <img src="images/funny_dog.gif"
             alt="This is a funny dog gif"
             height="200">
         </a>
-        
+
         <h2>
             woof woof!
         </h2>
