--- a/audio.html
+++ b/audio.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Audio Page</title>
 </head>
 <body>
     <audio controls autoplay muted loop>
         <source src="sources/Desert Drive - Everet Almond.mp3" type="audio/mpeg">
     </audio>
-    
+
     <!--
     we can also do that:
     <audio src="sources/Desert Drive - Everet Almond.mp3" controls autoplay muted loop>
