learn HTML text formatting

--- a/2 - lyrics.html
+++ b/2 - lyrics.html
@@ -10,7 +10,7 @@
             This page is my lyrics page!
         </h1>
 
-        <a href="index.html"
+        <a href="1 - index.html"
         title="home page">
         Goes to home page
         </a>
