moved files to HTML directory

--- a/HTML/13 - header and footer.html
+++ b/HTML/13 - header and footer.html
@@ -17,7 +17,7 @@
 
     <main>
         <h4>Check out these cool moves:</h4>
-        <image src="sources/happy_dance.gif" alt="happy dance gif">
+        <image src="/sources/happy_dance.gif" alt="happy dance gif">
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi libero ab, aut pariatur nesciunt veritatis, sint, totam dolor incidunt sed quam nihil ullam assumenda consequuntur?</p>    
     </main>
 
