--- a/HTML/4 - video.html
+++ b/HTML/4 - video.html
@@ -6,6 +6,6 @@
     <title>Video Page</title>
 </head>
 <body>
-    <video src="sources/movie.mp4" width="500px" controls autoplay muted loop></video>
+    <video src="/sources/movie.mp4" width="500px" controls autoplay muted loop></video>
 </body>
 </html>
