--- a/HTML/5 - audio.html
+++ b/HTML/5 - audio.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <audio controls autoplay muted loop>
-        <source src="sources/Desert Drive - Everet Almond.mp3" type="audio/mpeg">
+        <source src="/sources/Desert Drive - Everet Almond.mp3" type="audio/mpeg">
     </audio>
 
     <!--
