--- a/HTML/3 - dogs.html
+++ b/HTML/3 - dogs.html
@@ -16,14 +16,14 @@
 
         <hr><br>
 
-        <img src="sources/dog.png"
+        <img src="/sources/dog.png"
         alt="This is a picture of a dog"
         height="200">
 
         <br><br>
 
         <a href="https://www.pinterest.com/pin/because-they-chase-and-attack-their-own-reflections--562809284657639550/">
-            <img src="sources/funny_dog.gif"
+            <img src="/sources/funny_dog.gif"
             alt="This is a funny dog gif"
             height="200">
         </a>
