--- a/HTML/6 - favicon.html
+++ b/HTML/6 - favicon.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="images/jpg" href="sources/favicon.jpg">
+    <link rel="icon" type="images/jpg" href="/sources/favicon.jpg">
     <title>Favicon</title>
 </head>
 <body>
