adding html and stylesheets directories

--- a/CSS/html/1.3 external.html
+++ b/CSS/html/1.3 external.html
@@ -6,7 +6,7 @@
     <title>External</title>
 
     <!-- External -->
-    <link rel="stylesheet" href="/CSS/1.3 external.css">
+    <link rel="stylesheet" href="/CSS/stylesheets/1.3 external.css">
 </head>
 <body>
 
