--- a/HTML/1 - index.html
+++ b/HTML/1 - index.html
@@ -9,7 +9,7 @@
         <h1>
             Hello world!
         </h1>
-        <a href="2 - lyrics.html"
+        <a href="2 - links.html"
         target="_top"
         title="home page">
         Goes to lyrics page
