--- a/CSS/html/5 - shadows.html
+++ b/CSS/html/5 - shadows.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1 align="center">Welcome to our website!</h1>
+    <h1 style="text-align: center;">Welcome to our website!</h1>
     <div id="box1"></div>
 
 </body>
