--- a/CSS/CSS Playground - Tips, Tricks and Hacks/HTML/3 - cube loader.html
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/HTML/3 - cube loader.html
@@ -8,13 +8,8 @@
 </head>
 <body>
     
-    <div class="cube">
-        <div class="face"></div>
-        <div class="face"></div>
-        <div class="face"></div>
-        <div class="face"></div>
-        <div class="face"></div>
-        <div class="face"></div>
+    <div class="content">
+        <div class="cube"></div>
     </div>
 
 </body>
