--- a/CSS/CSS Playground - Tips, Tricks and Hacks/HTML/5 - animated toggle menu.html
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/HTML/5 - animated toggle menu.html
@@ -5,6 +5,7 @@
     <title>animated toggle menu</title>
     <link rel="stylesheet" href="/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/5 - animated toggle menu.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
+    
 </head>
 <body>
     <button class="toggle-menu">
@@ -29,14 +30,6 @@
     </pre>
 
     
-
-    <script>
-        const menu = document.querySelector(".menu");
-        const toggleBtn = document.querySelector(".toggle-menu");
-
-        toggleBtn.addEventListener("click", () => {
-            menu.classList.toggle('visible');
-        })
-    </script>
+    <script src="../JS/5 - animated toggle menu.js"></script>
 </body>
 </html>
