update Lightbulb Toggle

--- a/CSS/CSS Playground - Tips, Tricks and Hacks/HTML/07 - lightbulb toggle.html
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/HTML/07 - lightbulb toggle.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>07 - lightbulb toggle</title>
+    <title>Lightbulb Toggle</title>
+    <link rel="stylesheet" href="/CSS/CSS Playground - Tips, Tricks and Hacks/stylesheets/07 - lightbulb toggle.css">
 </head>
 <body>
-    
+    <div class="container">
+        <img id="bulb" src="bulb-off.png" alt="Lightbulb">
+        <div class="buttons">
+            <button id="on" onclick="myFuncOn()">ON</button>
+            <button id="off" onclick="myFuncOff()">OFF</button>
+        </div>
+        <h1>CSS</h1>
+        <h1>JavaScript</h1>
+    </div>
+
+    <script src="/CSS/CSS Playground - Tips, Tricks and Hacks/JS/07 - lightbulb toggle.js"></script>
 </body>
 </html>
