finish lightbulb toggle

--- a/CSS/CSS Playground - Tips, Tricks and Hacks/HTML/07 - lightbulb toggle.html
+++ b/CSS/CSS Playground - Tips, Tricks and Hacks/HTML/07 - lightbulb toggle.html
@@ -8,13 +8,11 @@
 </head>
 <body>
     <div class="container">
-        <img id="bulb" src="bulb-off.png" alt="Lightbulb">
+        <img id="bulb" src="/sources/Bulb_On_Image.png" alt="Lightbulb">
         <div class="buttons">
             <button id="on" onclick="myFuncOn()">ON</button>
             <button id="off" onclick="myFuncOff()">OFF</button>
         </div>
-        <h1>CSS</h1>
-        <h1>JavaScript</h1>
     </div>
 
     <script src="/CSS/CSS Playground - Tips, Tricks and Hacks/JS/07 - lightbulb toggle.js"></script>
